; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ibm_newemac/extr_phy.c_phy_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ibm_newemac/extr_phy.c_phy_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_phy = type { i32, i32, i32 (i32, i32, i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mii_phy*, i32, i32)* @phy_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @phy_write(%struct.mii_phy* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mii_phy*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mii_phy* %0, %struct.mii_phy** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mii_phy*, %struct.mii_phy** %4, align 8
  %8 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %7, i32 0, i32 2
  %9 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** %8, align 8
  %10 = load %struct.mii_phy*, %struct.mii_phy** %4, align 8
  %11 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.mii_phy*, %struct.mii_phy** %4, align 8
  %14 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 %9(i32 %12, i32 %15, i32 %16, i32 %17)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
